# grust

./: .gitignore  Cargo.toml
src/: main.rs
