[package]
name = "grust"
version = "0.1.0"
edition = "2024"

[dependencies]
league-toolkit = { git = "https://github.com/LeagueToolkit/league-toolkit.git", version = "0.1.0" }
reqwest = { version = "0.12.22", features = ["blocking","json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-stopwatch = "0.1.4"
url = "2.5.4"

xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
